# reaper

./: .gitignore  CLAUDE.md  README.md  config.example.json  pyproject.toml  setup.py  test_demo.py
docs/: REAPER_PLAN.md
reddit_reaper/: __init__.py  cli.py  client.py  formatters.py
src/reddit_reaper/: __init__.py  cli.py  client.py  config.py  formatter.py  retriever.py
