[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-reaper"
version = "0.1.0"
description = "CLI tool to retrieve your own Reddit content for repurposing"
requires-python = ">=3.9"
dependencies = [
    "praw>=7.7.1",
]

[project.scripts]
reddit-reaper = "reddit_reaper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
